--- a/BinanceTransferAPI/appsettings.json
+++ b/BinanceTransferAPI/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DbConnection": "Server=localhost;Database=BinanceDb;Trusted_Connection=True;TrustServerCertificate=True",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
