binance-01. Added auto mapper, added card entity, added settings in dbcontext, refactoring

--- a/BinanceTransferAPI/BinanceTransferAPI.csproj
+++ b/BinanceTransferAPI/BinanceTransferAPI.csproj
@@ -18,4 +18,8 @@
       <ProjectReference Include="..\BinanceTransfer.Infrastructure\BinanceTransfer.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    </ItemGroup>
+
 </Project>
